--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.jasrodis</groupId>
+	<groupId>org.jasrodis.bootfx</groupId>
 	<artifactId>spring-boot-fx</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
@@ -41,27 +41,12 @@
 		<!-- Plugins -->
 		<plugins>
 
-			<!-- Maven compiler plugin -->
+			<!-- Maven compiler plugin - Java 8+ -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>${project.groupId}.CryptosimGuiApp</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
 				</configuration>
 			</plugin>
 
@@ -70,7 +55,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.5.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -79,7 +63,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>${project.groupId}.CryptosimGuiApp</mainClass>
+					<mainClass>${project.groupId}.BootFxApp</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -92,6 +76,12 @@
 		<dependency>
 			<groupId>com.github.jasrodis</groupId>
 			<artifactId>javafx-dataviewer-wrapper</artifactId>
+			<version>-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.github.jasrodis</groupId>
+			<artifactId>javafx-dataviewer-example</artifactId>
 			<version>-SNAPSHOT</version>
 		</dependency>
 
@@ -108,12 +98,14 @@
 			<version>1.7.6</version>
 		</dependency>
 
+		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
 
+		<!-- Mongo -->
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
@@ -126,16 +118,19 @@
 			<version>1.5.9.RELEASE</version>
 		</dependency>
 
+		<!-- Jackson for application.yml -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.2.3</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
