--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.9</source>
+					<target>1.9</target>
 				</configuration>
 			</plugin>
 
@@ -78,7 +78,7 @@
 			<artifactId>javafx-dataviewer-wrapper</artifactId>
 			<version>-SNAPSHOT</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.github.jasrodis</groupId>
 			<artifactId>javafx-dataviewer-example</artifactId>
@@ -124,18 +124,26 @@
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.2.3</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+
+		<!-- Controls FX -->
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>9.0.0</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
