Progressing with form

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 			<!-- Maven compiler plugin - Java 8+ -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.9</source>
 					<target>1.9</target>
